2014-03-01  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 11.8.0-rc3 Released.

	* chan_sip: Fix crash in ast_channel_hangupcause_set().

	  Fix crash in ast_channel_hangupcause_set() because p->owner not
	  checked before calling.  Regression introduced by the fix for
	  ASTERISK-22621.

	  (closes issue ASTERISK-23135)
	  Reported by: OK

	  (issue ASTERISK-23323)
	  Reported by: Walter Doekes

2014-02-27  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 11.8.0-rc2 Released.

	* res_rtp_asterisk: Fix checklist creating problems in ICE sessions

	  Prior to this patch, local candidate lists including SRFLX would
	  fail to start properly when building ICE candidate check lists. This
	  patch fixes that problem by making sure that each SRFLX candidate is
	  associated with the proper base address so that the check list can
	  create matches properly. This patch was written by jcolp. Note that
	  the issue will be left open to await testing by the issue
	  participants.

	  (issue ASTERISK-23213)
	  Reported by: Andrea Suisani
	  Review: https://reviewboard.asterisk.org/r/3256

	  revisions 409129,409130 from
	  https://svn.asterisk.org/svn/asterisk/branches/11

2014-01-14  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 11.8.0-rc1 Released.

2014-01-14 18:43 +0000 [r405434-405487]  Scott Griepentrog <sgriepentrog@digium.com>

	* /, channels/chan_sip.c: chan_sip: No BYE message sent after
	  INVITE with Replaces Setting channel state DOWN is an unnecessary
	  step that was only being done in handle_invite_replaces(). This
	  changes that by removing the call and reducing locking. (closes
	  issue ASTERISK-23010) Reported by: Ryan Tilton Review:
	  https://reviewboard.asterisk.org/r/3116/ ........ Merged
	  revisions 405486 from
	  http://svn.asterisk.org/svn/asterisk/branches/1.8

	* /, channels/chan_sip.c: chan_sip: fix Local From tag on outbound
	  register regression In ASTERISK-12117, an improvement to insure