@@ -1,1 +1,1 @@
-11.8.0-rc3
+11.8.0
